--- a/classmate/src/App.css
+++ b/classmate/src/App.css
@@ -21,7 +21,7 @@
   justify-content: center;
 }
 .App-logo {
-  width: 80vmin;
+  width: 100vmin;
   margin-top: 2vh;
   pointer-events: none;
   padding-right: 2vw;
@@ -34,7 +34,7 @@
 .buttonAlignment{
   display: flex;
   justify-content: center;
-  padding-top: 80px;
+  padding-top: 20px;
 }
 
 .App-link {
@@ -62,8 +62,6 @@
   font-size: 20px;
   margin-left: 10px;
   margin-right: 10px;
-
-
 }
 .button:hover {
   background-color: #FADC30;
@@ -80,3 +78,52 @@
   justify-items: center;
 }
 
+.audioStyle{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.summarizationStyle{
+  width: 75%;
+  border: 1px solid #FADC30;
+  border-radius: 8px;
+  padding: 15px 15px;
+}
+
+
+.jumbotron {
+  margin-top: 20px;
+  width: 55%;
+  padding: 15px 15px;
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(72, 71, 71);
+  background: rgb(246, 244, 244);
+  border: 5px;
+  border-color: #fff;
+  border-radius: 15px;
+  border-style:solid;
+  }
+  .jumbotron2 {
+    margin-top: 20px;
+    width: 800px;
+    max-width: 800px;
+    padding: 15px 15px;
+    background-position: 0% 25%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: rgb(72, 71, 71);
+    background: #fff;
+    border: 2px;
+    border-color: #FADC30;
+    border-radius: 15px;
+    border-style:solid;
+    }
+
+  .megaPhoneStyle{
+    size: 20px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
